test: add unit tests for all use cases