@@ -6,33 +6,33 @@ import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.Collections;
+import java.util.List;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
+
     @ExceptionHandler(CustomException.class)
     public ResponseEntity<ErrorDetails> handleCustomException(CustomException ex) {
-        ErrorDetails errorDetails = new ErrorDetails(
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss")),
-                ex.getCode(),
-                "Error",
-                Collections.singletonList(ex.getMessage())
-        );
-
-        return new ResponseEntity<>(errorDetails, HttpStatus.valueOf(ex.getCode()));
+        ErrorDetails apiError = ErrorDetails
+                .builder()
+                .timestamp(LocalDateTime.now())
+                .code(HttpStatus.NOT_FOUND.value())
+                .status(HttpStatus.NOT_FOUND.name())
+                .errors(List.of(ex.getMessage()))
+                .build();
+        return new ResponseEntity<>(apiError, HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorDetails> handleGeneralException(Exception ex) {
-        ErrorDetails errorDetails = new ErrorDetails(
-                LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss")),
-                HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                "Internal Server Error",
-                Collections.singletonList(ex.getMessage())
-        );
-
-        return new ResponseEntity<>(errorDetails, HttpStatus.INTERNAL_SERVER_ERROR);
+        ErrorDetails apiError = ErrorDetails
+                .builder()
+                .timestamp(LocalDateTime.now())
+                .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
+                .status(HttpStatus.INTERNAL_SERVER_ERROR.name())
+                .errors(List.of(ex.getMessage()))
+                .build();
+        return new ResponseEntity<>(apiError, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
